--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Sven Luther <luther@debian.org>, Matt Kraai <kraai@debian.org>, Stephen R. Marenka <smarenka@debian.org>
 Build-Depends: debhelper (>= 4.2.0)
 Standards-Version: 3.6.1
+XS-Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/nobootloader
 
 Package: nobootloader
 XC-Package-Type: udeb
