--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,8 @@ Source: nobootloader
 Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
-Uploaders: Sven Luther <luther@debian.org>, Matt Kraai <kraai@debian.org>, Stephen R. Marenka <smarenka@debian.org>
+Uploaders: Sven Luther <luther@debian.org>, Matt Kraai <kraai@debian.org>, Stephen R. Marenka <smarenka@debian.org>, Frans Pop <fjp@debian.org>
 Build-Depends: debhelper (>= 4.2.0)
-Standards-Version: 3.6.1
 XS-Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/nobootloader
 
 Package: nobootloader
