Use 'installed-base' virtual package dependency instead of explicit 'base-installer' one
To allow a better flexibility regarting the way of installer does the
system installation a new virtual package called
'installed-base'. base-installer package has been change to provide
this new virtual package and the other packages depending on it has
also been change.

The affected package are:

 - aboot-installer
 - apt-setup
 - colo-installer
 - elilo-installer
 - finish-install
 - flash-kernel
 - nobootloader
 - palo-installer
 - sibyl-installer
 - silo-installer
 - zipl-installer

r47285

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: nobootloader
 XC-Package-Type: udeb
 Architecture: all
 Provides: bootable-system
-Depends: cdebconf-udeb, base-installer (>= 1.23), di-utils-mapdevfs
+Depends: cdebconf-udeb, installed-base, di-utils-mapdevfs
 XB-Installer-Menu-Item: 7700
 Description: Don't install any bootloader.
  This package will skip installing a boot-loader
