--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Sven Luther <luther@debian.org>, Matt Kraai <kraai@debian.org>, Stephen R. Marenka <smarenka@debian.org>, Frans Pop <fjp@debian.org>
 Build-Depends: debhelper (>= 4.2.0)
-XS-Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/nobootloader
+Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/nobootloader
 
 Package: nobootloader
 XC-Package-Type: udeb
