--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Vcs-Browser: http://git.debian.org/?p=d-i/nobootloader.git
 Vcs-Git: git://git.debian.org/d-i/nobootloader.git
 
 Package: nobootloader
-XC-Package-Type: udeb
+Package-Type: udeb
 Architecture: all
 Provides: bootable-system
 Depends: cdebconf-udeb, installed-base, di-utils-mapdevfs
