--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Stephen R. Marenka <smarenka@debian.org>, Christian Perrier <bubulle@debian.org>
-Build-Depends: debhelper (>= 7.0.0)
-Vcs-Browser: http://git.debian.org/?p=d-i/nobootloader.git
-Vcs-Git: git://git.debian.org/d-i/nobootloader.git
+Build-Depends: debhelper (>= 9)
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=d-i/nobootloader.git
+Vcs-Git: git://anonscm.debian.org/d-i/nobootloader.git
 
 Package: nobootloader
 Package-Type: udeb
