--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Stephen R. Marenka <smarenka@debian.org>, Christian Perrier <bubulle@debian.org>
 Build-Depends: debhelper (>= 9)
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=d-i/nobootloader.git
-Vcs-Git: git://anonscm.debian.org/d-i/nobootloader.git
+Vcs-Browser: https://anonscm.debian.org/cgit/d-i/nobootloader.git
+Vcs-Git: https://anonscm.debian.org/git/d-i/nobootloader.git
 
 Package: nobootloader
 Package-Type: udeb
