--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Stephen R. Marenka <smarenka@debian.org>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 13~)
 Vcs-Browser: https://salsa.debian.org/installer-team/nobootloader
 Vcs-Git: https://salsa.debian.org/installer-team/nobootloader.git
 
