--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,9 @@ jobs:
     - run: sudo apt-get install device-tree-compiler
     - run: sudo apt-get install libtool-bin
     - run: sudo apt-get install qemu-system-aarch64 sharutils
+    - run: git checkout https://github.com/pipcet/dg
     - name: Set env variables
       uses: ./dg/github/env/
-    - run: (cd pearl; git submodule update --init --recursive -- debian)
     - run: echo 1 | sudo tee /proc/sys/vm/overcommit_memory
     - run: make PACKAGE=nobootloader -j13 -f dg/dg.mk build/packages.cpio
     - run: make -f dg/dg.mk $(ls build/nobootloader*.udeb){release}
