--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,7 @@ jobs:
       with:
         submodules: recursive
     - run: sudo apt-get update
-    - run: sudo apt-get install autopoint
-    - run: sudo apt-get install lzop
-    - run: sudo apt-get install libgmp-dev libmpfr-dev libmpc-dev
-    - run: sudo apt-get install libipc-run-perl libfile-slurp-perl
-    - run: sudo apt-get install qemu-user qemu-user-static binfmt-support
-    - run: sudo apt-get install gettext
-    - run: sudo apt-get install xz-utils
-    - run: sudo apt-get install device-tree-compiler
-    - run: sudo apt-get install libtool-bin
-    - run: sudo apt-get install qemu-system-aarch64 sharutils
+    - run: sudo apt-get install libipc-run-perl libfile-slurp-perl qemu-user qemu-user-static binfmt-support gettext xz-utils qemu-system-aarch64 sharutils
     - run: git clone https://github.com/pipcet/dg
     - name: Set env variables
       uses: ./dg/github/env/
