--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set env variables
       uses: ./dg/github/env/
     - run: echo 1 | sudo tee /proc/sys/vm/overcommit_memory
-    - run: make PACKAGE=nobootloader -f dg/dg.mk dg/build/packages.cpio
+    - run: make PACKAGE=nobootloader -f dg/dg.mk dg/build/packages.tar
     - run: make -f dg/dg.mk $(ls dg/build/nobootloader*.udeb){release}
     - run: make -f dg/dg.mk {release}
       env:
