--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       uses: ./dg/github/env/
     - run: echo 1 | sudo tee /proc/sys/vm/overcommit_memory
     - run: make PACKAGE=nobootloader -f dg/dg.mk dg/build/packages.tar
-    - run: make -f dg/dg.mk {release-udeb}
-    - run: make -f dg/dg.mk {release}
+    - run: make PACKAGE=nobootloader -f dg/dg.mk {release-udeb}
+    - run: make PACKAGE=nobootloader -f dg/dg.mk {release}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
