--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         submodules: recursive
     - run: sudo apt-get update
     - run: sudo apt-get install libipc-run-perl libfile-slurp-perl qemu-user qemu-user-static binfmt-support gettext xz-utils qemu-system-aarch64 sharutils
-    - run: git clone https://github.com/pipcet/dg
+    - run: git clone https://github.com/pipcet/dg -b main
     - name: Set env variables
       uses: ./dg/github/env/
     - run: echo 1 | sudo tee /proc/sys/vm/overcommit_memory
